--- a/wui/src/app/views/layouts/tabs-and-content.rhtml
+++ b/wui/src/app/views/layouts/tabs-and-content.rhtml
@@ -5,7 +5,6 @@
  <%= render :partial => '/layouts/navigation_tabs' %>
 </div> 
 <div id="main">
-  <div id="content-area">
-    <%= yield  %> <%# the rest of the center and right hand side %>
+  <div id="content_area">
   </div>
 </div>
