--- a/wui/src/app/views/layouts/_tree.rhtml
+++ b/wui/src/app/views/layouts/_tree.rhtml
@@ -19,9 +19,9 @@
             hardware_url: "<%=  url_for :controller =>'/hardware', :action => 'show' %>",
             resource_url: "<%=  url_for :controller =>'/resources', :action => 'show' %>"
         }
-        $('#test-tree').everyTime(10000,function(){
-          load(tree_reload, {}, this, this);
-        })
+        //$('#test-tree').everyTime(10000,function(){
+        //  load(tree_reload, {}, this, this);
+        //})
     });
 </script>
 
