permission denormalization. (revised)
Permission records are now stored for all pools a user has access to, even implied/inherited permissions. This means that if an admin is granted access to the 'default' pool, there will be one permission record for this pool, and an additional "inherited" record for each pool below 'default' in the hierarchy -- for the rest of these records, inherited_from_id will point to the master permission record.

Any time a user is granted permission on a pool, the inherited records are automatically created. When a new pool is created, inherited records are created here too.

You need to run 'rake db:migrate' to get the updated permissions table --  the migration script will take care of creating inherited records for existing permissions.

In the UI, both direct and inherited grants are shown, but only direct grants have the checkbox to allow modification/deletion.

--- a/wui/src/app/views/user/_grid.rhtml
+++ b/wui/src/app/views/user/_grid.rhtml
@@ -5,27 +5,32 @@
 </form>
 </div>
 <script type="text/javascript">
-	$("#<%= table_id %>").flexigrid
-	(
-	{
-	url: '<%=  url_for :controller => parent_controller, :action => "users_json", :id => pool.id %>',
-	dataType: 'json',
-	colModel : [
-		{display: '', name : 'id', width : 20, sortable : false, align: 'left', process: <%= table_id %>checkbox},
-		{display: 'Name', name : 'uid', width : 180, sortable : true, align: 'left'},
-	        {display: 'Role', name : 'user_role', width : 80, sortable : true, align: 'left'}
-		],
-	sortname: "user",
-	sortorder: "asc",
-	usepager: <%= pool.permissions.size > users_per_page ? 'true' : 'false' %>,
-	useRp: true,
-	rp: <%= users_per_page %>,
-	showTableToggleBtn: true
-	}
-	);   
-	function <%= table_id %>checkbox(celDiv)
-	{
-	       $(celDiv).html('<input type="checkbox" name="grid_checkbox'+$(celDiv).html()+'" class="grid_checkbox" value="'+$(celDiv).html()+'"/>');
-	} 
-
+    $("#<%= table_id %>").flexigrid
+    (
+    {
+    url: '<%=  url_for :controller => parent_controller, :action => "users_json", :id => pool.id %>',
+    dataType: 'json',
+    colModel : [
+        {display: '', name : 'id', width : 20, sortable : false, align: 'left', process: <%= table_id %>checkbox},
+        {display: 'Name', name : 'uid', width : 180, sortable : true, align: 'left'},
+        {display: 'Role', name : 'user_role', width : 80, sortable : true, align: 'left'},
+        {display: '', width : 80, sortable : true, align: 'left'}
+        ],
+    sortname: "user",
+    sortorder: "asc",
+    usepager: <%= pool.permissions.size > users_per_page ? 'true' : 'false' %>,
+    useRp: true,
+    rp: <%= users_per_page %>,
+    showTableToggleBtn: true
+    }
+    );
+    function <%= table_id %>checkbox(celDiv)
+    {
+        var grid_id = $(celDiv).html().split("_");
+        if (grid_id[1] == 1) {
+            $(celDiv).html('<input type="checkbox" name="grid_checkbox'+grid_id[0]+'" class="grid_checkbox" value="'+grid_id[0]+'"/>');
+	} else {
+            $(celDiv).html('')
+        }
+     }
 </script>
