adds cobbler provisioning to ovirt WUI
First, there are a few things either missing or not part of this patch:
1) current IPA/ovirt httpd conf breaks cobbler WUI. slinabery has fixes for this, but I'm not sure if those are pushed
2) since we're still using username/passwd for cobbler, you've got to set up cobbler with password access, and make sure username/password matches config/cobbler.yml
   This bit need to be built into the appliance setup
3) for this to work you've got to have cobbler profiles created.
4) vm creation w/ cobbler provisioning has not yet been tested, as we're having host image networking troubles right now.

--- a/wui/src/app/views/vm/_form.rhtml
+++ b/wui/src/app/views/vm/_form.rhtml
@@ -8,8 +8,7 @@
 <%= hidden_field_tag 'hardware_pool_id', @hardware_pool.id if @hardware_pool %>
 
     <%= text_field_with_label "Name:", "vm", "description", {:style=>"width:250px;"}  %>
-    <!-- FIXME: cobbler stuff here. what do we do now? -->	
-    <%= select_tag_with_label "Operating System:", 'cobbler_profile', {"Fedora 9" => "fedora9"}, :style=>"width:250px;" %>
+    <%= select_with_label "Operating System:", 'vm', 'cobbler_profile', @cobbler_profiles, :style=>"width:250px;"  if create %>
     <div class="clear_row" style="height:15px;"></div>
 
     <div class="form_heading">Resources</div>
