Reposition facebox on subtab select.
For example 'add storage pool'. Box was positioned based
on initially displayed content.  This positioning needed to
be called again whenever the content changes.

Signed-off-by: Jason Guiditta <jguiditt@redhat.com>

--- a/wui/src/app/views/layouts/redux.rhtml
+++ b/wui/src/app/views/layouts/redux.rhtml
@@ -84,6 +84,7 @@
                           var wrapped_data = $(data).find('div').filter('[id=dialog-content-area]');
                           var my_parent = $(this).parent();
                           $('#dialog-content-area').html($(data));
+                          $('#facebox').css('left', $(window).width() / 2 - ($('#facebox table').width() / 2));
                         },
                         error: function(xhr) {$.jGrowl(xhr.status + ' ' + xhr.statusText);}
                     });
