replace gtk-vnc with virt-viewer plugin
open issue:
- console.rhtml opens as new window, it was displaying gtk-vnc plugin.
  virt-viewer plugin doesn't display anything, it just launches an external
  virt-viewer program. We could embedd the plugin in show.rhtml, if it were
  possible to control the plugin when to launch virt-viewer.

Signed-off-by: Alan Pevec <apevec@redhat.com>

--- a/wui/src/app/views/vm/console.rhtml
+++ b/wui/src/app/views/vm/console.rhtml
@@ -26,10 +26,13 @@
 </div>
     </body>
 <%else -%>
-<embed type="application/x-gtk-vnc"
-    width="800"
-    height="600"
-    host="<%= @vm.host.hostname%>" port="<%= @vm.vnc_port%>">
+<embed type="application/x-virt-viewer"
+    hidden="1"
+    uri="qemu+tcp://<%= @vm.host.hostname%>/system"
+    name="<%= @vm.uuid%>">
 </embed>
+virt-viewer started<br/>
+hypervisor qemu+tcp://<%= @vm.host.hostname%>/system<br/>
+virtual machine <%= @vm.uuid%> <br/>
 <%end -%>
   </html>
