--- a/wui/src/public/stylesheets/facebox.css
+++ b/wui/src/public/stylesheets/facebox.css
@@ -69,7 +69,7 @@
 #facebox .tl, #facebox .tr, #facebox .bl, #facebox .br {
   height: 10px;
   width: 10px;
-  overflow: hidden;
+  overflow: auto;
   padding: 0;
 }
 
