No data returned in hosts popup
There was an encoding problem between what rails was doing
and what the flexigrid javascript was doing.

Signed-off-by: Jason Guiditta <jguiditt@redhat.com>

--- a/wui/src/app/views/host/_grid.rhtml
+++ b/wui/src/app/views/host/_grid.rhtml
@@ -12,6 +12,7 @@
     {
     url: '<%=  url_for :controller => "hardware",
                        :action => "hosts_json",
+                       :escape => false,
                        :id => (hwpool.nil? ? nil : hwpool.id),
                        :exclude_pool => exclude_pool,
                        :exclude_host => exclude_host,
