Make cobbler profile choice optional.(revised)
new VM page allows choice of any cobbler profile, or PXE (pxe boot without managing provisioning), or HD boot.

renamed cobbler_profile VM field 'provisioning', and store field as "cobbler:profile:$profilename".

This allows for cobbler image support, and possibly other provisioning schemes without rewriting the VM mode

wrapped new VM form cobbler call in begin/rescue so that we fall back gracefully (skip profiles) if cobbler isn't running.
Signed-off-by: Scott Seago <sseago@redhat.com>

--- a/wui/src/app/views/vm/_form.rhtml
+++ b/wui/src/app/views/vm/_form.rhtml
@@ -8,7 +8,7 @@
 <%= hidden_field_tag 'hardware_pool_id', @hardware_pool.id if @hardware_pool %>
 
     <%= text_field_with_label "Name:", "vm", "description", {:style=>"width:250px;"}  %>
-    <%= select_with_label "Operating System:", 'vm', 'cobbler_profile', @cobbler_profiles, :style=>"width:250px;"  if create %>
+    <%= select_with_label "Operating System:", 'vm', 'provisioning_and_boot_settings', @provisioning_options, :style=>"width:250px;"  if create %>
     <div class="clear_row" style="height:15px;"></div>
 
     <div class="form_heading">Resources</div>
