--- a/wui/src/public/stylesheets/layout.css
+++ b/wui/src/public/stylesheets/layout.css
@@ -408,7 +408,7 @@ a { color:#000000; text-decoration: none;}
 
 .dialog_form {
   margin: 15px;
-  background: #FFFFFF
+  background: #FFFFFF;
 }
 
 .dialog_tree {
