use vinagre launcher plugin for VM console access
Connects directly to the VNC port on the Node running selected VM
Machine running the browser needs to have virt-viewer-plugin-0.0.3-3ovirt1
installed, available from YUM repository http://ovirt.org/repos/ovirt/9/

openssh-clients added to the package list because new virt-viewer-plugin
doesn't pull it anymore

Signed-off-by: Alan Pevec <apevec@redhat.com>

--- a/wui/src/app/views/vm/console.rhtml
+++ b/wui/src/app/views/vm/console.rhtml
@@ -28,11 +28,11 @@
 <%else -%>
 <embed type="application/x-virt-viewer"
     hidden="1"
-    uri="qemu+tcp://<%= @vm.host.hostname%>/system"
+    uri="<%= @vnc_hostname%>:<%= @vm.vnc_port%>"
     name="<%= @vm.uuid%>">
 </embed>
-virt-viewer started<br/>
-hypervisor qemu+tcp://<%= @vm.host.hostname%>/system<br/>
-virtual machine <%= @vm.uuid%> <br/>
+Console started for virtual machine <%= @vm.uuid%> <br/>
+host <%= @vm.host.hostname%><br/>
+VNC port <%= @vm.vnc_port%><br/>
 <%end -%>
   </html>
